# probably-bool

./: .gitignore  Cargo.toml  README.md  publish.ps1
examples/: basic_decode.rs  custom_storage.rs  flip_distribution.rs  sizing.rs  three_flips.rs
src/: bit_flip_model.rs  bit_storage.rs  boolean.rs  decoded_boolean.rs  encoded_boolean.rs  error.rs  lib.rs  prior.rs  probability.rs  sizing.rs  storage_recommendation.rs
tests/: api.rs  exhaustive.rs
